# santander-dio-backend-python-desafio-5

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
store/core/: config.py
store/schemas/: base.py  product.py
tests/schemas/: test_product.py
