[tool.poetry]
name = "fastapi-tdd"
version = "0.1.0"
description = "Desafio DIO Santader Backend Python"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.116.0"
uvicorn = "^0.35.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
motor = "^3.7.1"
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
pre-commit = "^4.2.0"

[tool.poetry.dev-dependencies]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
    "--strict-config",
    "--strict-markers",
    "--ignore=docs_src",
]
xfail_strict = true
junit_family = "xunit2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
